--- a/public/global.css
+++ b/public/global.css
@@ -2,10 +2,12 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+
+	background-color: #263238;
 }
 
 body {
-	color: #333;
+	color: #B0BEC5;
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
@@ -36,22 +38,25 @@ input, button, select, textarea {
 	padding: 0.4em;
 	margin: 0 0 0.5em 0;
 	box-sizing: border-box;
-	border: 1px solid #ccc;
+	border: 1px solid #2A373E;
 	border-radius: 2px;
+
+	background-color: #415967;
+	color: #B0BEC5;
 }
 
 input:disabled {
-	color: #ccc;
+	color: #607D8B;
 }
 
 button {
-	color: #333;
-	background-color: #f4f4f4;
+	color: #B0BEC5;
+	background-color: #2E3C43;
 	outline: none;
 }
 
 button:disabled {
-	color: #999;
+	color: #415967;
 }
 
 button:not(:disabled):active {
@@ -59,5 +64,5 @@ button:not(:disabled):active {
 }
 
 button:focus {
-	border-color: #666;
+	border-color: #1E272C;
 }
